force-app/main/default/objects/PostalRequest__c/PostalRequest__c.object-meta.xml
<CustomObject>
    <label>郵送依頼</label>
    <nameField>
        <displayFormat>PR-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>郵送依頼ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>