force-app/main/default/objects/PostalRequest__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完了</label>
    <type>Checkbox</type>
</CustomField>