force-app/main/default/objects/PostalRequest__c/fields/IssueCount__c.field-meta.xml
<CustomField>
    <fullName>IssueCount__c</fullName>
    <label>発送数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>