force-app/main/default/objects/PostalRequest__c/fields/PostalRequestCount__c.field-meta.xml
<CustomField>
    <fullName>PostalRequestCount__c</fullName>
    <label>郵送依頼数</label>
    <summarizedField>PostalRequestDetail__c.PostalRequestCount__c</summarizedField>
    <summaryForeignKey>PostalRequestDetail__c.PostalRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>