force-app/main/default/objects/PostalRequest__c/fields/PostalRequestDate__c.field-meta.xml
<CustomField>
    <fullName>PostalRequestDate__c</fullName>
    <label>郵送依頼日</label>
    <type>Date</type>
</CustomField>